add reach min and max number in an array of numbers